k8s/command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: maksimsech/command-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
  - name: default
    protocol: TCP
    port: 80
    targetPort: 80
