k8s/rabbitmq-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: rabbitmq-management-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbitmq-messaging-port
    protocol: TCP
    port: 5672
    targetPort: 5672
