k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-service
spec:
  rules:
  - host: platforms.mng-microservice-education.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-clusterip-service
            port:
              number: 80
  - host: commands.mng-microservice-education.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: command-clusterip-service
            port:
              number: 80
